[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scene/Table.tscn" type="PackedScene" id=1]
[ext_resource path="res://Script/playing.gd" type="Script" id=2]
[ext_resource path="res://Font/mplus-1m-regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
outline_color = Color( 0.0705882, 0.129412, 0.509804, 1 )
font_data = ExtResource( 3 )

[node name="Playing" type="Node2D"]
script = ExtResource( 2 )

[node name="Table" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 50 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ResetButton" type="Button" parent="CanvasLayer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 60.0
margin_bottom = 40.0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -60.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 40.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 10.0
margin_right = 100.0
margin_bottom = 40.0
text = "STEP: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearLabel" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -475.0
margin_right = 270.0
margin_bottom = 475.0
custom_fonts/font = SubResource( 1 )
text = "CLEAR!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="CanvasLayer/BackButton" to="." method="_on_BackButton_pressed"]
